# voxel-space

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  anim.py  build.zig  imgui.ini  main.cpp  pcx.hpp
.github/workflows/: build.yml
data/dfd1/: DFD1.TRN  DFD1_CM.CAL
src/: c.zig  compile_sokol.c  main.cpp  main.zig
src/shaders/: build_shaders.py  cube.glsl.h  cube_compile.c  instancing.glsl.h  instancing_compile.c  triangle.glsl.h  triangle_compile.c
